# flex-evals

./: .gitignore  .ruff.toml  Makefile  README.md  implementation.md  playbook.md  pyproject.toml  temp.ipynb  test_combined_approach.py
.github/workflows/: tests.yaml
ai_summaries/: 2025-10-25-json-path-performance-refactor.md  2025-10-28-remove-experiment-metadata-field.md
docs/implementation_plans/: 2025-11-21-async-evaluate.md  2026-02-21-decorator-results.md
examples/: evaluation_analysis.csv  evaluation_results.json  example_yaml_test_cases.ipynb  llm-as-a-judge.ipynb  llm-as-a-judge_computed_field.ipynb  pytest_decorator_example.py  quickstart.ipynb  schema_generator.ipynb  schema_generator_demo.py  test_cases.yaml
src/flex_evals/: __init__.py  constants.py  engine.py  exceptions.py  jsonpath_resolver.py  pytest_decorator.py  registry.py  schema_generator.py
tests/: conftest.py  schemas_for_test_checks.py  test_async_fixtures.py  test_base_checks.py  test_check_validation.py  test_engine_versioning.py  test_evaluation_engine.py  test_evaluation_engine_optimization.py  test_extended_checks.py  test_jsonpath_resolver.py  test_jsonpath_validation.py  test_pytest_decorator.py  test_pytest_decorator_async_fixtures.py  test_registry.py  test_schema_check_classes.py  test_schema_check_integration.py  test_schema_generator.py  test_schema_implementation_consistency.py  test_schema_nullable_types.py  test_standard_checks.py
tests/test_checks/: __init__.py  test_attribute_exists.py  test_contains.py  test_custom_function.py  test_equals.py  test_exact_match.py  (+6 more)
(+50 files in other folders)
